--- a/static/css/main.css
+++ b/static/css/main.css
@@ -664,6 +664,18 @@ video {
   max-height: calc(100vh - 8.25rem);
 }
 
+.max-h-\[\] {
+  max-height: ;
+}
+
+.max-h-\[800px\] {
+  max-height: 800px;
+}
+
+.max-h-\[700px\] {
+  max-height: 700px;
+}
+
 .\!w-px {
   width: 1px !important;
 }
@@ -763,6 +775,12 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
+}
+
+.space-y-2 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
 .overflow-auto {
