--- a/templates/index.html
+++ b/templates/index.html
@@ -55,20 +55,20 @@
       <!-- Sync Area -->
       <div class="ml-5 flex p-3 justify-center items-center">
         {% if not_syncing %}
-
+        {% if screens|length > 0 %}
+        <form action="/screen" method="post">
+          <button class="bg-dark-300 px-4 py-2 rounded-xl  hover:scale-110 shadow-md">&#9881;</button>
+        </form>
+        {% endif %}
         <form action="/sync" method="post">
           <button class="bg-blue-700 hover:bg-blue-800 py-2 px-10 rounded">Sync</button>
         </form>
-
         {% else %}
-
         <form action="/stop" method="post">
           <button class="bg-red-700 hover:bg-red-800 py-2 px-10 rounded">Stop</button>
         </form>
-
         {% endif %}
       </div>
-
     </div>
 
 
@@ -95,7 +95,6 @@
             </button>
           </form>
           {% endif %}
-
         </div>
         {% endfor %}
       </div>
@@ -127,7 +126,6 @@
         <p>2. Scroll through your unit quests in-game.</p>
         <p>3. Make sure nothing is blocking the quests while your scrolling.</p>
       </div>
-
       {% else %}
 
       <!-- Syncing Quests List -->
@@ -142,13 +140,32 @@
       {% endif %}
       {% endif %}
     </div>
-
   </main>
+
+  {% if forceScreen and not_syncing %}
+
+  <!-- Choose Screen Modal -->
+  <div class="absolute left-0 top-0 w-screen h-screen flex items-center justify-center backdrop-brightness-50">
+    <div class="flex flex-col items-center space-y-4 bg-dark-100 p-12 rounded-md shadow-md lg:space-y-12">
+      <div>
+        <h1>Choose the screen your gonna play with:</h1>
+      </div>
+      <div class="lg:grid lg:grid-cols-2 lg:gap-12 max-h-[700px] max-lg:space-y-4 overflow-auto p-4">
+        {% for screen in screens %}
+        <form action="/screen/{{ loop.index0 }}" method="post">
+          <button class="bg-dark-200 rounded-md shadow-md border-2 border-dark-100 hover:border-dark-300 max-w-lg">
+            <img src="/imgs/{{ screen.4 }}.png" alt="">
+          </button>
+        </form>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+  {% else %}
 
   <!-- Duplicates Modal -->
   {% if dups|length > 0 and not_syncing %}
   <div class="absolute left-0 top-0 w-screen h-screen flex items-center justify-center backdrop-brightness-50">
-
     <div class="flex flex-col items-center bg-dark-100 p-12 rounded-md shadow-md lg:space-y-12">
       <div>
         <h1>Found {{dups|first|length}} duplicates while scanning. <br> Please choose the correct one:</h1>
@@ -166,12 +183,10 @@
         {% endfor %}
       </div>
     </div>
-
   </div>
   {% endif %}
-
+  {% endif %}
 </body>
-
 <script type="text/javascript" charset="utf-8">
 
   //Post Request Template
@@ -267,5 +282,4 @@
     })
   });
 </script>
-
 </html>
