--- a/templates/index.html
+++ b/templates/index.html
@@ -21,10 +21,10 @@
   <main class="w-[700px] mx-auto h-full flex-col px-4 pt-4">
 
     <!-- Top Row -->
-    <div class="grid h-24 grid-cols-3 mb-5 mx-2 bg-dark-200 rounded-xl shadow-md">
+    <div class="grid h-24 grid-cols-5 mb-5 mx-2 bg-dark-200 rounded-xl shadow-md">
 
       <!-- Quests Stats -->
-      <div class="mr-5 flex col-span-2 p-3 justify-evenly items-center">
+      <div class="mr-5 flex col-span-3 p-3 justify-evenly items-center">
         {% if not_syncing %}
 
         {% if quests|length + doneQ|length > 0 %}
@@ -53,21 +53,32 @@
       </div>
 
       <!-- Sync Area -->
-      <div class="ml-5 flex p-3 justify-center items-center">
+      <div class="ml-5 flex p-3 col-span-2 justify-around items-center">
         {% if not_syncing %}
-        {% if screens|length > 0 %}
-        <form action="/screen" method="post">
-          <button class="bg-dark-300 px-4 py-2 rounded-xl  hover:scale-110 shadow-md">&#9881;</button>
-        </form>
-        {% endif %}
-        <form action="/sync" method="post">
-          <button class="bg-blue-700 hover:bg-blue-800 py-2 px-10 rounded">Sync</button>
-        </form>
-        {% else %}
-        <form action="/stop" method="post">
-          <button class="bg-red-700 hover:bg-red-800 py-2 px-10 rounded">Stop</button>
-        </form>
-        {% endif %}
+        {% if screens|length > 1 and 0 <= chosenScreen < screens|length %} <form action="/screen" method="post">
+          <button class="bg-dark-300 px-4 py-2 rounded shadow-md flex space-x-2 hover:brightness-90 items-center">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="size-6">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M6 20.25h12m-7.5-3v3m3-3v3m-10.125-3h17.25c.621 0 1.125-.504 1.125-1.125V4.875c0-.621-.504-1.125-1.125-1.125H3.375c-.621 0-1.125.504-1.125 1.125v11.25c0 .621.504 1.125 1.125 1.125Z" />
+            </svg>
+
+            <p>{{ chosenScreen + 1}}</p>
+          </button>
+          </form>
+          {% endif %}
+          <form action="/sync" method="post">
+            <button class="bg-blue-700 hover:bg-blue-800 py-2 px-10 rounded">
+              <p>Sync</p>
+            </button>
+          </form>
+          {% else %}
+          <form action="/stop" method="post">
+            <button class="bg-red-700 hover:bg-red-800 py-2 px-10 rounded">
+              <p>Stop</p>
+            </button>
+          </form>
+          {% endif %}
       </div>
     </div>
 
@@ -91,7 +102,7 @@
           <form action="/done/{{ loop.index0 }}" method="post"
             class="flex items-center justify-center p-4 relative right-0">
             <button class="bg-dark-300 px-4 py-2 rounded-xl  hover:scale-110 shadow-md">
-              &check;
+              <p>&check;</p>
             </button>
           </form>
           {% endif %}
@@ -109,7 +120,7 @@
           <form action="/undone" method="post" class="flex items-center justify-center p-4 relative right-0">
             <input name="done" value="{{ done }}" class="hidden" />
             <button class="bg-blue-700 px-4 py-2 rounded-xl  hover:scale-110 shadow-md">
-              &check;
+              <p>&check;</p>
             </button>
           </form>
           {% endif %}
@@ -154,7 +165,8 @@
         {% for screen in screens %}
         <form action="/screen/{{ loop.index0 }}" method="post">
           <button class="bg-dark-200 rounded-md shadow-md border-2 border-dark-100 hover:border-dark-300 max-w-lg">
-            <img src="/imgs/{{ screen.4 }}.png" alt="">
+            <p class="p-2">Display {{ loop.index0 + 1 }}</p>
+            <img class="select-none" src="/imgs/{{ screen.4 }}.png" alt="">
           </button>
         </form>
         {% endfor %}
@@ -282,4 +294,5 @@
     })
   });
 </script>
+
 </html>
