--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,14 @@
 </head>
 
 <body class="bg-dark-100 text-gray-300 h-dvh min-w-[700px]font-bold text-lg">
-
+  {% if forceUpdate %}
+  <div class="absolute left-0 top-0 w-screen h-screen flex items-center justify-center backdrop-brightness-50">
+    <div class="flex flex-col items-center bg-dark-100 p-12 rounded-md shadow-md lg:space-y-12">
+      <h1 class="select-none">Found an update, please install:</h1>
+      <a href="{{ url }}/download" class="text-blue-500 hover:underline">Download Here</a>
+    </div>
+  </div>
+  {% else %}
   <!-- Main Container -->
   <main class="w-[700px] mx-auto h-full flex-col px-4 pt-4">
 
@@ -181,7 +188,7 @@
         {% for screen in screens %}
         <form action="/screen/{{ loop.index0 }}" method="POST">
           <button class="bg-dark-200 rounded-md shadow-md border-2 border-dark-100 hover:border-dark-300 max-w-lg">
-            <p class="p-2">Display {{ loop.index0 + 1 }}</p>
+            <p class="p-2 select-none">Display {{ loop.index0 + 1 }}</p>
             <img class="select-none" src="/imgs/{{ screen.4 }}.png" alt="">
           </button>
         </form>
@@ -195,7 +202,7 @@
   {% if dups|length > 0 and not_syncing %}
   <div class="absolute left-0 top-0 w-screen h-screen flex items-center justify-center backdrop-brightness-50">
     <div class="flex flex-col items-center bg-dark-100 p-12 rounded-md shadow-md lg:space-y-12">
-      <div>
+      <div class="select-none">
         <h1>Found {{dups|first|length}} duplicates while scanning. <br> Please choose the correct one:</h1>
         <h1 class="text-center text-red-500">{{dups|length}} duplicate type{{ 's' if dups|length > 1 else '' }} left!
         </h1>
@@ -212,6 +219,7 @@
       </div>
     </div>
   </div>
+  {% endif %}
   {% endif %}
   {% endif %}
 </body>
