--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
   <script src="https://raw.githack.com/SortableJS/Sortable/master/Sortable.js"></script>
 </head>
 
-<body class="bg-dark-100 text-gray-300 h-dvh min-w-[700px]font-bold text-lg">
+<body class="bg-dark-100 text-gray-300 h-dvh min-w-[700px] font-bold text-lg">
   {% if forceUpdate %}
   <div class="absolute left-0 top-0 w-screen h-screen flex items-center justify-center backdrop-brightness-50">
     <div class="flex flex-col items-center bg-dark-100 p-12 rounded-md shadow-md lg:space-y-12">
@@ -25,7 +25,7 @@
   </div>
   {% else %}
   <!-- Main Container -->
-  <main class="w-[700px] mx-auto h-full flex-col px-4 pt-4">
+  <main class="xl:w-[1280px] mx-auto h-full flex-col px-4 pt-4">
 
     <!-- Top Row -->
     <div
@@ -163,7 +163,9 @@
         <p>1. Press the Sync button.</p>
         <p>2. Scroll through your unit quests in-game.</p>
         <p>3. Make sure nothing is blocking the quests while your scrolling.</p>
+        <video autoplay loop muted src="/vids/tutorial" />
       </div>
+
       {% else %}
 
       <!-- Syncing Quests List -->
